# aml-generation-cluster

./: .gitignore  README.md  generate_answers.py  pyproject.toml  run.sh  submit.sbatch
data/: clauses.jsonl
dynamic_rrf/: README.md  generate_answers.py  pyproject.toml  run.sh  submit.sbatch
dynamic_rrf/scripts/: graph_build.py  retriever.py
query_type_retrieval/: README.md  generate_answers.py  pyproject.toml  run.sh  submit.sbatch  test_ir_gate.py
query_type_retrieval/data/: test_set.jsonl
query_type_retrieval/scripts/: retriever.py
reranker/: .env.example  README.md  generate_answers.py  pyproject.toml  run.sh  submit.sbatch  test_ir_gate.py
reranker/data/: cross_refs.jsonl
reranker/scripts/: build_chroma.py  retriever.py
results/: answers.jsonl
scripts/: retriever.py
