[project]
name = "aml-generation-cluster"
version = "0.2.0"
description = "Standalone answer generation (4 retrieval configs x 50 queries) for the AML RAG dissertation - run on the cluster. Primary generator (8B) and generator-scale ablation (70B) both supported via --model-size."
requires-python = ">=3.11"
dependencies = [
    "torch>=2.6.0",
    "transformers>=4.46.0",
    "accelerate>=1.0.0",
    "bitsandbytes>=0.44.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "rank-bm25==0.2.2",
    "sentence-transformers==5.6.0",
    "chromadb==1.5.9",
    "networkx==3.6.1",
    "langchain-core==1.4.7",
    "langchain-chroma==1.1.0",
    "langchain-huggingface==1.2.2",
]
