[project]
name = "aml-query-type-retrieval"
version = "0.1.0"
description = "Query-type-conditioned retrieval experiment (fifth config: hybrid_query_type) for the AML RAG dissertation - run on the cluster, generator fixed at Llama-3.1-8B to match the primary comparison."
requires-python = ">=3.11"
dependencies = [
    "torch>=2.6.0",
    "transformers>=4.46.0",
    "accelerate>=1.0.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "rank-bm25==0.2.2",
    "sentence-transformers==5.6.0",
    "chromadb==1.5.9",
    "networkx==3.6.1",
    "langchain-core==1.4.7",
    "langchain-chroma==1.1.0",
    "langchain-huggingface==1.2.2",
]
